# actix-web-playground

./: -X  .env  .gitignore  Cargo.toml  README.md  compose.yml
backend/: .env  Cargo.toml  Dockerfile
backend/migrations/: 20250221063219_user.up.sql  20250301145420_todos.up.sql
backend/src/: api.rs  entity.rs  main.rs
backend/src/api/: auths.rs  todos.rs  users.rs
backend/src/api/auths/: signin_api.rs
backend/src/api/auths/fixtures/: user_fixture.sql
backend/src/api/errors/: notfound.rs
backend/src/api/todos/: create.rs  delete.rs  list.rs  update.rs  view.rs
backend/src/api/users/: create.rs  delete.rs  list.rs  signin.rs  update.rs  view.rs
backend/src/entity/: app_state.rs  request.rs  response.rs  sqlx_result.rs  todo.rs  user.rs
backend/src/entity/request/: user_view_request.rs
backend/src/entity/response/: api_error_response.rs  api_response.rs
backend/src/infrastructure/: postgres_client.rs
backend/src/repository/: todos.rs  users.rs
backend/src/repository/todos/: create_todo.rs  delete_todo.rs  fetch_todo_by_id.rs  fetch_todos.rs  update_todo.rs
backend/src/repository/todos/fixtures/: todo_fixture.sql  todos_fixture.sql
backend/src/repository/users/: create_user.rs  delete_user.rs  fetch_user_by_id.rs  fetch_user_by_password.rs  fetch_users.rs  update_user.rs
backend/src/repository/users/fixtures/: users.sql
docs/: er-diagram.md
frontend/: .prettierignore  Dockerfile  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
migrations/: 20250221063219_user.up.sql
(+70 files in other folders)
