[package]
name = "actix-web-playground"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
derive_more = { version = "2.0.1", features = ["display", "error"] }
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.138"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "postgres"] }
